# axiom-perception-mcp

./: .gitignore  LICENSE  README.md  SECURITY.md  fastmcp.json  glama.json  mcpize.yaml  pyproject.toml  requirements.txt  server.json  smithery.yaml
patterns/: community_patterns.json
src/perception/: __main__.py  db.py  server.py
src/perception/tools/: checkpoints.py  community.py  coordination.py  macos_ax.py  memory.py
