[project]
name = "axiom-perception-mcp"
version = "1.2.0"
description = "Persistent memory and pattern learning for AI agents — never re-learn the same workflow twice. Community patterns for Twitter, GitHub, LinkedIn, and more. Zero API keys required."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Victor Dalhambra", email = "victor@axiom.tools" },
]
keywords = ["mcp", "memory", "agent", "workflow", "automation", "patterns", "learning", "ai-agent", "claude", "playwright"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "fastmcp>=3.2.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
macos = [
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-ApplicationServices>=10.0",
]

[project.scripts]
axiom-perception-mcp = "perception.server:main"
axiom-perception = "perception.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/perception"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
